packages/webauthn-demo-client/src/Authentication.module.css
/* Reset body */
body {
  margin: 0;
  padding: 0;
}

.pageLeft {
  background: linear-gradient(45deg, rgb(50, 120, 177), rgb(134, 72, 171));

  /* Center align contents (i.e. login box) */
  height: 100vh;
  width: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.pageRight {
  position: absolute;
  right: 0;
  top: 0;
  height: 100vh;
  width: 50%;

  display: flex;
  background-color: rgb(50, 50, 50);

  align-items: center;
  justify-content: center;
}

@media screen and (max-width: 550px) {
  .pageLeft {
    width: 100%;

    min-height: 50vh;
    height: auto;
  }

  .pageRight {
    position: relative;
    width: 100%;
    height: 50vh;
  }
}

.container {
  font-family: "Tahoma", sans-serif;
  text-align: center;

  margin: 50px 0;
  background-color: white;
  border-radius: 10px;
  padding: 30px 50px;
  box-sizing: border-box;
  min-width: 300px;
  max-width: 400px;

  color: #3c4760;

  position: relative;
}

.title {
  font-size: 1.8rem;
}

.container hr {
  margin: 40px 0;
}

.emailIn {
  display: block;
  padding: 15px;
  width: 100%;
  box-sizing: border-box;

  border: 1px solid rgb(50, 120, 177);

  margin-bottom: 50px;
}

.pageLeft input[type="submit"] {
  display: block;
  margin: 10px auto;
  padding: 15px;
  width: 100%;
  border: none;
  border-radius: 5px;
  color: white;
  cursor: pointer;
}

.loginBtn {
  background-color: rgb(50, 120, 177);
}

.registerBtn {
  background-color: rgb(134, 72, 171);
}

.restrictedContentContainer {
  font-family: "Tahoma", sans-serif;
  background-color: white;
  padding: 20px;
  border-radius: 10px;

  max-width: 400px;
}

.restrictedContent {
  display: block;
  min-height: 60px;
  background-color: #ddd;
  border-radius: 5px;
  padding: 10px;
  margin-bottom: 20px;
}

.restrictedContentContainer button {
  padding: 15px 25px;
  border: none;
  border-radius: 5px;
  color: white;
  cursor: pointer;

  background: rgb(50, 120, 177);
}

